--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>¡Hola, mundo!</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catálogo de mi Saraicita</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Catálogo de mi Saraicita</h1>
+    </header>
+    <main>
+        <div class="catalogo">
+            <div class="moto">
+                <img src="saraicita5.jpg" alt="hola">
+                <h2>Mi saraicita</h2>
+            </div>
+            <div class="moto">
+                <img src="saraicita4.jpg" alt="LaQueMandoYo">
+                <h2>La Que Manda Alex</h2>
+            </div>
+            <div class="moto">
+                <img src="saraicita3.jpg" alt="Yamaha r6">
+                <h2>Mi Futura Novia</h2>
+            </div>
+            <div class="moto">
+                <img src="saraicita.jpg" alt="ElAmorDeMiVida">
+                <h2>El Amor De Mi Vida</h2>
+            </div>
+            <div class="moto">
+                <img src="yamahar6.png" alt="MiFuturaNovia">
+                <h2>Yamaha r6</h2>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
