--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <h1>Catálogo de mi Saraicita</h1>
+
+        video controls width="600">
+    <source src="nombre-del-video.mp4" type="video/mp4">
+    Tu navegador no soporta la reproducción de videos.
+</video>
+        
     </header>
     <main>
         <div class="catalogo">
