--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Catálogo de mi Saraicita</h1>
 
-        video controls width="600">
+<video controls width="600">
     <source src="nombre-del-video.mp4" type="video/mp4">
     Tu navegador no soporta la reproducción de videos.
 </video>
