--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Catálogo de mi Saraicita</h1>
 
 <video controls width="600">
-    <source src="nombre-del-video.mp4" type="video/mp4">
+    <source src"saraicitavideo.mp4" type="video/mp4">
     Tu navegador no soporta la reproducción de videos.
 </video>
         
